Unable to logout on mobile! Fixed

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -14,5 +14,12 @@ $footerBg: #f9f9f9;
         border-bottom: none;
         margin: 0 5px;
         text-decoration: none;
+
+        &.footer-logout{
+            display: inline-block;
+            @media (min-width: 576px) {
+                display: none;
+            }
+        }
     }
 }
